# fastapi-upload-test

./: .gitignore  README.md  main.py  pyproject.toml
static/: scripts.js  styles.css
templates/: index.html
