[project]
name = "fastapi-upload-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.8.5",
]
